Fix people image overlaps

--- a/src/components/styles/master.scss
+++ b/src/components/styles/master.scss
@@ -196,10 +196,9 @@ strong {
 
   .image {
     width: 25vw;
-    height: 25vw;
     max-width: 180px;
-    max-height: 180px;
     padding-right: 10px;
+    padding-bottom: 10px;
     flex-grow: 0;
     flex-shrink: 0;
   }
